--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "elm": "^0.18.0",
     "elm-webpack-loader": "^4.3.0",
+    "eslint": "^4.9.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
