--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "webpack-dev-server --hot --inline",
     "prebuild": "rimraf dist",
     "build": "webpack",
-    "reinstall": "npm i rimraf && rimraf node_modules && npm uninstall -g elm && npm i -g elm && npm i && elm package install"
+    "reinstall": "npm i rimraf && rimraf node_modules && npm uninstall -g elm && npm i -g elm && npm i && elm package install",
+    "lint": "elm-format ./src --yes && ./node_modules/eslint/bin/eslint.js --fix webpack.config.js src/static/index.js"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
