--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "build": "webpack",
     "reinstall": "npm i rimraf && rimraf node_modules && npm uninstall -g elm && npm i -g elm && npm i && elm package install",
     "lint-js": "./node_modules/eslint/bin/eslint.js --fix webpack.config.js src/static/index.js",
-    "lint-elm": "elm-format ./src --yes"
+    "lint-elm": "elm-format ./src --yes",
+    "heroku-prebuild": "npm i -g webpack",
+    "heroku-postbuild": "webpack --progress"
+  },
+  "engines": {
+    "node": "6.11.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
@@ -31,5 +36,8 @@
     "webpack": "^2.3.1",
     "webpack-dev-server": "^2.4.2",
     "webpack-merge": "^4.1.0"
+  },
+  "dependencies": {
+    "express": "^4.16.2"
   }
 }
