--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "elm-webpack-starter",
-  "description": "Webpack setup for writing Elm apps",
-  "version": "0.8.6",
+  "name": "rooms-checker-elm",
+  "description": "Frontend of rooms-checker app, checks for free rooms in WIT",
+  "version": "0.0.1",
   "license": "MIT",
-  "author": "Peter Morawiec",
+  "author": "Thai Le",
   "repository": {
     "type": "git",
-    "url": "https://github.com/moarwick/elm-webpack-starter"
+    "url": "https://github.com/thailekha/rooms-checker-elm"
   },
   "scripts": {
     "start": "webpack-dev-server --hot --inline",
@@ -14,7 +14,7 @@
     "build": "webpack",
     "reinstall": "npm i rimraf && rimraf node_modules && npm uninstall -g elm && npm i -g elm && npm i && elm package install",
     "lint-js": "./node_modules/eslint/bin/eslint.js --fix webpack.config.js src/static/index.js",
-    "lint-elm": "elm-format ./src --yes",
+    "lint-elm": "elm-format ./src/elm --yes",
     "heroku-postbuild": "./node_modules/webpack/bin/webpack.js --progress"
   },
   "engines": {
