travis build artifact and run test

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "webpack-dev-server --hot --inline",
     "prebuild": "rimraf dist",
     "build": "webpack",
+    "test": "node ./node_modules/mocha/bin/mocha ./tests/accept/*.js --timeout 3000",
     "reinstall": "npm i rimraf && rimraf node_modules && npm uninstall -g elm && npm i -g elm && npm i && elm package install",
     "lint-js": "./node_modules/eslint/bin/eslint.js --fix webpack.config.js src/static/index.js",
     "lint-elm": "elm-format ./src/elm --yes",
@@ -23,15 +24,17 @@
   "dependencies": {
     "autoprefixer": "^6.7.7",
     "copy-webpack-plugin": "^4.0.1",
-    "express": "^4.16.2",
     "elm": "^0.18.0",
     "elm-webpack-loader": "^4.3.0",
     "eslint": "^4.9.0",
+    "express": "^4.16.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.1",
+    "mocha": "^4.0.1",
     "rimraf": "^2.6.1",
+    "supertest": "^3.0.0",
     "url-loader": "^0.5.8",
     "webpack": "^2.3.1",
     "webpack-dev-server": "^2.4.2",
