--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "node": "6.11.2"
   },
   "dependencies": {
+    "express": "^4.16.2"
+  },
+  "devDependencies": {
     "autoprefixer": "^6.7.7",
     "copy-webpack-plugin": "^4.0.1",
-    "elm": "^0.18.0",
     "elm-webpack-loader": "^4.3.0",
     "eslint": "^4.9.0",
-    "express": "^4.16.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
