--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "reinstall": "npm i rimraf && rimraf node_modules && npm uninstall -g elm && npm i -g elm && npm i && elm package install",
     "lint-js": "./node_modules/eslint/bin/eslint.js --fix webpack.config.js src/static/index.js",
     "lint-elm": "elm-format ./src/elm --yes",
-    "heroku-postbuild": "./node_modules/webpack/bin/webpack.js --progress"
+    "heroku-postbuild": "./node_modules/webpack/bin/webpack.js --progress",
+    "serve": "node app.js"
   },
   "engines": {
     "node": "6.11.2"
